--- a/package.json
+++ b/package.json
@@ -11,18 +11,17 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@headlessui/react": "^2.2.9",
-    "@neondatabase/serverless": "^1.0.2",
-    "@prisma/adapter-neon": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@neondatabase/serverless": "0.10.4",
+    "@prisma/adapter-neon": "5.22.0",
     "bcryptjs": "^3.0.3",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
-    "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "ws": "^8.19.0"
   },
   "devDependencies": {
+    "@prisma/client": "^5.22.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -30,6 +29,7 @@
     "@types/ws": "^8.18.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "^5.22.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
